# JerryAudio

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/donald/jerryaudio/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/donald/jerryaudio/: MainActivity.java
app/src/main/java/com/donald/jerryaudio/audio/: AudioRecordFactory.java  AudioRecorder.java  JavaAudio.java  JavaAudioFactory.java  OboeAudio.java
app/src/main/java/com/donald/jerryaudio/example/: MainActivity.java
app/src/main/java/com/donald/jerryaudio/log/: JerryLog.java
app/src/main/jni/: CMakeLists.txt  jni_bridge.cpp
app/src/main/res/values/: strings.xml
app/src/test/java/com/donald/jerryaudio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
